# inchworm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: check-python.yml  check-rust.yml  ci.yml  pre-commit.yml  python.yml  rust.yml  sync-main-to-develop.yml  test-python.yml  test-rust.yml
crates/inchworm/: Cargo.toml
crates/inchworm-dimensions/: Cargo.toml
crates/inchworm-dimensions/src/: atom.rs  base_dimension_def.rs  derived_dimension_def.rs  dimension_component.rs  dimension_def.rs  error.rs  errors.rs  exp.rs  form.rs  lib.rs  registry.rs
crates/inchworm-py/: Cargo.toml
crates/inchworm-py/src/: dimensions.rs  errors.rs  lib.rs
crates/inchworm/src/: dimensions.rs  lib.rs
python/inchworm/: __init__.py  inchworm.pyi
python/inchworm/dimensions/: __init__.py  __init__.pyi
python/tests/: test_add.py
python/tests/dimensions/: test_base_dimension_def.py  test_registry.py
