[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/enrico-lattuada/inchworm"
repository = "https://github.com/enrico-lattuada/inchworm"
authors = ["Enrico Lattuada <lattuada.enrico@gmail.com>"]
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
inchworm = { path = "crates/inchworm" }
inchworm-dimensions = { path = "crates/inchworm-dimensions" }
inchworm-py = { path = "crates/inchworm-py" }
