[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "inchworm"
description = "A units-and-quantities library, written in Rust"
authors = [{ name = "Enrico Lattuada", email = "lattuada.enrico@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cases"]
dev = [
    "inchworm[tests]",
    "maturin>=1.10,<2.0",
    "mypy",
]

[project.urls]
Source = "https://github.com/enrico-lattuada/inchworm"
Issues = "https://github.com/enrico-lattuada/inchworm/issues"

[tool.maturin]
manifest-path = "crates/inchworm-py/Cargo.toml"
python-source = "python"
