[package]
name = "inchworm-py"
version.workspace = true
edition.workspace = true
description = "Python bindings for the Inchworm Rust library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "inchworm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
