[package]
name = "inchworm"
description = "A units-and-quantities library"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
inchworm-dimensions = { path = "../inchworm-dimensions" }

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
